--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
   },
-  "exclude": ["node_modules", "build"]
+  "exclude": ["node_modules", "dist"]
 }
