--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
 
     "postcss": "^8.4.16",
     "autoprefixer": "^10.4.8",
