--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "src/electron/main.ts",
   "scripts": {
     "build": "webpack",
-    "electron": "electron dist/electron.js",
-    "electron:dev": "nodemon",
+    "electron": "cross-env ELECTRON_IS_DEV=0 electron dist/electron.js",
+    "electron:dev": "cross-env ELECTRON_IS_DEV=1 nodemon",
     "react": "webpack --config webpack/react.config.js",
     "react:dev": "webpack serve --config webpack/react.config.js --mode=development",
     "start": "npm run build && npm run electron",
@@ -23,6 +23,7 @@
     "cross-env": "^7.0.3",
 
     "electron": "^20.1.1",
+    "electron-is-dev": "^2.0.0",
 
     "typescript": "^4.8.2",
     "@types/node": "^18.7.14",
@@ -33,6 +34,7 @@
     "ts-loader": "^9.3.1",
     "css-loader": "^6.7.1",
     "style-loader": "^3.3.1",
+    "postcss-loader": "^7.0.1",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^4.2.1",
     "html-webpack-plugin": "^5.5.0",
@@ -40,6 +42,10 @@
 
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+
+    "postcss": "^8.4.16",
+    "autoprefixer": "^10.4.8",
+    "tailwindcss": "^3.1.8",
 
     "eslint": "^8.23.0",
     "eslint-plugin-react": "^7.31.6",
