--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,7 +16,7 @@ tauri-build = { version = "1.0.0", features = [] }
 [dependencies]
 # Tauri
 tauri = { version = "1.0.0", features = ["api-all"] }
-window-shadows = "0.1.3"
+window-shadows = "0.2.0"
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
@@ -25,7 +25,11 @@ serde_json = "1.0"
 # Backend (HTTP)
 reqwest = "0.11.11"
 
+# Discord
+discord-rich-presence = "0.2.3"
+
 # Global
+lazy_static = "1.4.0"
 once_cell = "1.14.0"
 
 [features]
