--- a/package.json
+++ b/package.json
@@ -5,14 +5,23 @@
 
   "main": "src/electron/main.ts",
   "scripts": {
-    "build": "webpack --config ./webpack.config.js",
-    "start": "npm run build && electron ./dist/electron/main.js"
+    "build": "webpack",
+    "electron": "electron dist/electron.js",
+    "electron:dev": "nodemon",
+    "react": "webpack --config webpack/react.config.js",
+    "react:dev": "webpack serve --config webpack/react.config.js --mode=development",
+    "start": "npm run build && npm run electron",
+    "start:dev": "cross-env NODE_ENV=development concurrently --kill-others \"npm run react:dev\" \"npm run electron:dev\""
   },
 
   "dependencies": {
 
   },
   "devDependencies": {
+    "nodemon": "^2.0.19",
+    "concurrently": "^7.3.0",
+    "cross-env": "^7.0.3",
+
     "electron": "^20.1.1",
 
     "typescript": "^4.8.2",
@@ -23,7 +32,9 @@
     "webpack": "^5.74.0",
     "ts-loader": "^9.3.1",
     "webpack-cli": "^4.10.0",
+    "webpack-merge": "^4.2.1",
     "html-webpack-plugin": "^5.5.0",
+    "webpack-dev-server": "^4.10.1",
 
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
