--- a/package.json
+++ b/package.json
@@ -3,26 +3,46 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "lint": "eslint --ignore-path .gitignore ."
   },
+
   "dependencies": {
     "@tauri-apps/api": "^1.0.2"
   },
   "devDependencies": {
+    "typescript": "^4.6.4",
     "@types/node": "^18.7.10",
-    "@sveltejs/vite-plugin-svelte": "^1.0.1",
-    "@tsconfig/svelte": "^3.0.0",
+
+    "@tauri-apps/cli": "^1.0.5",
+
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.0",
     "svelte-preprocess": "^4.10.7",
-    "tslib": "^2.4.0",
-    "typescript": "^4.6.4",
+    "@sveltejs/adapter-static": "^1.0.0-next.41",
+
+    "tailwindcss": "^3.1.8",
+    "postcss": "^8.4.16",
+    "cssnano": "^5.1.13",
+    "autoprefixer": "^10.4.8",
+    "postcss-font-magician": "^3.0.0",
+    "postcss-load-config": "^4.0.1",
+
+    "eslint": "^8.23.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "@typescript-eslint/parser": "^5.36.1",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+
     "vite": "^3.0.2",
-    "@tauri-apps/cli": "^1.0.5"
+    "@sveltejs/vite-plugin-svelte": "^1.0.1",
+
+    "tslib": "^2.4.0",
+    "@tsconfig/svelte": "^3.0.0"
   }
 }
