remove template and basic controls css
also change the package.json to use npx...

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "tauri": "tauri",
+    "tauri": "npx tauri",
     "lint": "eslint --ignore-path .gitignore .",
 
-    "start:dev": "tauri dev"
+    "start:dev": "npx tauri dev"
   },
 
   "dependencies": {
