--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
 
     "webpack": "^5.74.0",
     "ts-loader": "^9.3.1",
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^4.2.1",
     "html-webpack-plugin": "^5.5.0",
