--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "react/prop-types": "off",
     "quotes": ["warn", "double"],
     "semi": ["warn", "always"],
-    "indent": ["warn", 4]
+    "indent": ["warn", 4],
+    "no-empty-interface": false
   }
 }
