--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,9 +23,9 @@
   ],
   "rules": {
     "react/prop-types": "off",
-    "quotes": ["warn", "double"],
-    "semi": ["warn", "always"],
-    "indent": ["warn", 4],
-    "no-empty-interface": false
+    "quotes": ["error", "double"],
+    "semi": ["error", "always"],
+    "indent": ["error", 4],
+    "no-empty-interface": 0
   }
 }
