Progress Bar and Volume Slider
🌟 Progress Bar now uses bootstrap
🌟 Volume Slider is now styled
🌟 Volume Slider Tooltip
🌟 Fixed a bug where play button becomes a pause button after song ends 💀

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,9 +23,9 @@
   ],
   "rules": {
     "react/prop-types": "off",
-    "quotes": ["error", "double"],
-    "semi": ["error", "always"],
-    "indent": ["error", 4],
+    "quotes": ["warn", "double"],
+    "semi": ["warn", "always"],
+    "indent": ["warn", 4],
     "no-empty-interface": 0
   }
 }
