--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "electron:dev": "cross-env ELECTRON_IS_DEV=1 nodemon",
     "lint": "eslint src/**/*.ts",
     "react": "webpack --config webpack/react.config.js",
+    "react:dev": "webpack serve --config webpack/react.config.js --mode=development",
     "dev": "cross-env NODE_ENV=development concurrently --kill-others \"npm run react:dev\" \"npm run electron:dev\"",
-    "dev:react": "webpack serve --config webpack/react.config.js --mode=development",
     "start": "npm run build && npm run electron"
   },
   "dependencies": {
