--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,17 +5,26 @@
     "target": "es2022",
     "baseUrl": "src",
     "moduleResolution": "node",
-
     "sourceMap": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-
     "paths": {
-      "backend/*": ["backend/*"],
-      "frontend/*": ["ui/*"],
-      "components/*": ["ui/components/*"],
-      "app/*": ["*"]
+      "backend/*": [
+        "backend/*"
+      ],
+      "frontend/*": [
+        "ui/*"
+      ],
+      "components/*": [
+        "ui/components/*"
+      ],
+      "app/*": [
+        "*"
+      ]
     }
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
