--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,40 +10,34 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "tauri": "npx tauri",
     "lint": "eslint --ignore-path .gitignore .",
-
     "start:dev": "npx tauri dev"
   },
-
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@tauri-apps/api": "^1.0.2"
   },
   "devDependencies": {
-    "typescript": "^4.6.4",
-    "@types/node": "^18.7.10",
-
+    "@sveltejs/adapter-static": "^1.0.0-next.41",
+    "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "@tauri-apps/cli": "^1.0.5",
-
+    "@tsconfig/svelte": "^3.0.0",
+    "@types/node": "^18.7.10",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "autoprefixer": "^10.4.8",
+    "cssnano": "^5.1.13",
+    "eslint": "^8.23.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "postcss": "^8.4.16",
+    "postcss-font-magician": "^3.0.0",
+    "postcss-load-config": "^4.0.1",
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.0",
     "svelte-preprocess": "^4.10.7",
-    "@sveltejs/adapter-static": "^1.0.0-next.41",
-
     "tailwindcss": "^3.1.8",
-    "postcss": "^8.4.16",
-    "cssnano": "^5.1.13",
-    "autoprefixer": "^10.4.8",
-    "postcss-font-magician": "^3.0.0",
-    "postcss-load-config": "^4.0.1",
-
-    "eslint": "^8.23.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "@typescript-eslint/parser": "^5.36.1",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-
-    "vite": "^3.0.2",
-    "@sveltejs/vite-plugin-svelte": "^1.0.1",
-
     "tslib": "^2.4.0",
-    "@tsconfig/svelte": "^3.0.0"
+    "typescript": "^4.6.4",
+    "vite": "^3.0.2"
   }
 }
