--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "laudiolin"
-version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
+version = "0.1.0"
+description = "A Tauri-based music player."
+authors = ["KingRainbow44", "Arikatsu", "Shichiha"]
 license = ""
-repository = ""
+repository = "https://github.com/Dumbfuckery-Inc/Laudiolin"
 edition = "2021"
 rust-version = "1.57"
 
@@ -14,9 +14,16 @@ rust-version = "1.57"
 tauri-build = { version = "1.0.0", features = [] }
 
 [dependencies]
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
+# Tauri
 tauri = { version = "1.0.0", features = ["api-all"] }
+
+# Serialization
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+
+# Backend (HTTP & WebSockets)
+reqwest = "0.11.11"
+websocket = "0.26.5"
 
 [features]
 # by default Tauri runs in production mode
