--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tauri-apps/api": "^1.0.2",
+    "howler": "^2.2.3",
     "sveltestrap": "^5.9.0"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "tailwindcss": "^3.1.8",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
-    "vite": "^3.0.2"
+    "vite": "^3.0.2",
+    "vite-tsconfig-paths": "^3.5.0"
   }
 }
