--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,14 @@
      */
     "allowJs": true,
     "checkJs": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+
+    "paths": {
+      "app/*": ["src/*"],
+      "components/*": ["src/lib/*"],
+      "css/*": ["src/css/*"],
+      "backend/*": ["src/backend/*"]
+    }
   },
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
   "references": [{ "path": "./tsconfig.node.json" }]
