--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tauri-apps/api": "^1.0.2",
+    "bootstrap": "^5.2.1",
     "howler": "^2.2.3",
     "sveltestrap": "^5.9.0"
   },
@@ -34,7 +35,7 @@
     "postcss": "^8.4.16",
     "postcss-font-magician": "^3.0.0",
     "postcss-load-config": "^4.0.1",
-    "svelte": "^3.49.0",
+    "svelte": "^3.50.1",
     "svelte-check": "^2.8.0",
     "svelte-preprocess": "^4.10.7",
     "tailwindcss": "^3.1.8",
