Rust audio playback

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "@tauri-apps/cli": "^1.0.5",
     "@tsconfig/svelte": "^3.0.0",
+    "@types/howler": "^2.2.7",
     "@types/node": "^18.7.10",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
