--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,9 @@ serde_json = "1.0"
 reqwest = "0.11.11"
 websocket = "0.26.5"
 
+# Global
+once_cell = "1.14.0"
+
 [features]
 # by default Tauri runs in production mode
 # when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
