--- a/package.json
+++ b/package.json
@@ -16,39 +16,44 @@
   },
 
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
-
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
 
+    "@tauri-apps/api": "^1.0.2",
+
     "howler": "^2.2.3",
 
-    "@tauri-apps/api": "^1.0.2"
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.2.0",
+
+    "sass": "^1.54.9"
   },
+
   "devDependencies": {
-    "typescript": "^4.6.4",
+    "@tauri-apps/cli": "^1.0.5",
+
+    "@types/howler": "^2.2.7",
     "@types/node": "^18.7.10",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@types/howler": "^2.2.7",
 
-    "vite": "^3.0.2",
     "@vitejs/plugin-react": "^2.0.0",
-    "vite-tsconfig-paths": "^3.5.0",
 
-    "sass": "^1.54.9",
-    "cssnano": "^5.1.13",
-    "tailwindcss": "^3.1.8",
     "autoprefixer": "^10.4.8",
+    "cssnano": "^5.1.13",
 
     "postcss": "^8.4.16",
-    "postcss-load-config": "^4.0.1",
     "postcss-font-magician": "^3.0.0",
+    "postcss-load-config": "^4.0.1",
 
     "prettier": "^2.7.1",
 
-    "@tauri-apps/cli": "^1.0.5"
+    "tailwindcss": "^3.1.8",
+    
+    "typescript": "^4.6.4",
+
+    "vite": "^3.0.2",
+    "vite-tsconfig-paths": "^3.5.0"
   }
 }
