--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,7 @@ tauri-build = { version = "1.0.0", features = [] }
 [dependencies]
 # Tauri
 tauri = { version = "1.0.0", features = ["api-all"] }
+window-shadows = "0.1.3"
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
