--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,9 +22,8 @@ window-shadows = "0.1.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-# Backend (HTTP & WebSockets)
+# Backend (HTTP)
 reqwest = "0.11.11"
-websocket = "0.26.5"
 
 # Global
 once_cell = "1.14.0"
