--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ node_modules
 dist
 dist-ssr
 *.local
-package-lock.json
 src-tauri/Cargo.lock
 
 # Editor directories and files
@@ -23,3 +22,7 @@ src-tauri/Cargo.lock
 *.njsproj
 *.sln
 *.sw?
+
+# package manager generated files
+package-lock.json
+yarn.lock
