--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
 
     "howler": "^2.2.3",
+    "events": "^3.3.0",
 
     "@tauri-apps/api": "^1.0.2"
   },
