--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,11 +11,11 @@ rust-version = "1.57"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.0.0", features = [] }
+tauri-build = { version = "1.2.0", features = [] }
 
 [dependencies]
 # Tauri
-tauri = { version = "1.0.0", features = ["api-all"] }
+tauri = { version = "1.2.0", features = ["api-all"] }
 window-shadows = "0.2.0"
 
 # Serialization
@@ -25,6 +25,7 @@ serde_json = "1.0"
 # Backend (HTTP)
 reqwest = "0.11.11"
 tiny_http = "0.12.0"
+open = "3.0.3"
 
 # Discord
 discord-rich-presence = "0.2.3"
