--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "6.3.0",
     "framer-motion": "^7.3.5",
 
+    "bootstrap": "^5.2.3",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
 
