--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "laudiolin"
-version = "0.1.0"
+version = "1.0.0"
 description = "A Tauri-based music player."
 authors = ["KingRainbow44", "Arikatsu", "Shichiha"]
-license = ""
+license = "MIT"
 repository = "https://github.com/Dumbfuckery-Inc/Laudiolin"
 edition = "2021"
 rust-version = "1.57"
@@ -26,6 +26,7 @@ serde_json = "1.0"
 reqwest = "0.11.11"
 tiny_http = "0.12.0"
 open = "3.0.3"
+port-killer = "0.1.0"
 
 # Discord
 discord-rich-presence = "0.2.3"
