--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,7 +15,7 @@ tauri-build = { version = "1.2.0", features = [] }
 
 [dependencies]
 # Tauri
-tauri = { version = "1.2.0", features = ["api-all", "system-tray"] }
+tauri = { version = "1.2.0", features = ["api-all", "system-tray", "updater"] }
 window-shadows = "0.2.0"
 
 # Serialization
