--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
                   toolchain: stable
 
             - name: Install deps and build
-              run: yarn && yarn build --debug
+              run: yarn && yarn package --debug
 
             - name: Compress build
               uses: vimtor/action-zip@v1
@@ -69,7 +69,7 @@ jobs:
               run: sudo apt install libwebkit2gtk-4.0-dev build-essential curl wget libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
 
             - name: Install deps and build
-              run: yarn && yarn build --debug
+              run: yarn && yarn package --debug
 
             - name: Compress build
               uses: vimtor/action-zip@v1
