--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-router-dom": "6.3.0",
+    "react-beautiful-dnd": "^13.1.1",
     "framer-motion": "^7.3.5",
 
     "bootstrap": "^5.2.3",
