--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-bootstrap": "^2.6.0",
-    "react-router-dom": "6.3.0",
+    "react-router-dom": "^6.6.1",
     "react-beautiful-dnd": "^13.1.1",
     "framer-motion": "^7.3.5",
 
