--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "@app/*": ["src/*"],
       "@components/*": ["src/ui/components/*"],
       "@pages/*": ["src/ui/pages/*"],
+      "@links/*": ["src/ui/links/*"],
       "@css/*": ["src/css/*"],
       "@backend/*": ["src/backend/*"]
     }
