Only run build workflow on push to `tauri-react`

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,8 @@ on:
             - '.github/workflows/build.yml'
             - 'src-tauri/**/*'
             - 'src/**/*'
+        branches:
+            - 'tauri-react'
     pull_request:
         paths:
             - '.github/workflows/build.yml'
