--- a/package.json
+++ b/package.json
@@ -28,7 +28,19 @@
     "@types/react-dom": "^18.0.6",
 
     "vite": "^4.0.0",
+    "vite-tsconfig-paths": "^3.5.0",
     "@vitejs/plugin-react": "^3.0.0",
+
+    "sass": "^1.54.9",
+    "cssnano": "^5.1.13",
+    "tailwindcss": "^3.1.8",
+    "autoprefixer": "^10.4.8",
+
+    "postcss": "^8.4.16",
+    "postcss-load-config": "^4.0.1",
+    "postcss-font-magician": "^3.0.0",
+
+    "prettier": "^2.7.1",
 
     "@tauri-apps/cli": "^1.2.2"
   }
