--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-secure-storage": "^1.0.22",
+
+    "events": "^3.3.0",
+    "howler": "^2.2.3",
 
     "@tauri-apps/api": "^1.2.0"
   },
   "devDependencies": {
     "typescript": "^4.6.4",
+    "@types/howler": "^2.2.7",
     "@types/node": "^18.7.10",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
