--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-secure-storage": "^1.0.22",
+    "react-icons": "^4.7.1",
 
     "events": "^3.3.0",
     "howler": "^2.2.3",
