--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,9 +13,18 @@ edition = "2021"
 tauri-build = { version = "1.2", features = [] }
 
 [dependencies]
-serde_json = "1.0"
+# Tauri
+tauri = { version = "1.2.0", features = ["api-all", "system-tray", "updater"] }
+window-shadows = "0.2.0"
+
+# Serialization
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.2", features = ["api-all"] }
+serde_json = "1.0"
+
+# Deep Linking
+[dependencies.tauri-plugin-deep-link]
+git = "https://github.com/FabianLars/tauri-plugin-deep-link"
+branch = "main"
 
 [features]
 # by default Tauri runs in production mode
