--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,9 @@ window-shadows = "0.2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
+# Utility
+open = "3.2.0"
+
 # Deep Linking
 [dependencies.tauri-plugin-deep-link]
 git = "https://github.com/FabianLars/tauri-plugin-deep-link"
