Add command for checking if the system is online

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,8 +23,7 @@ serde_json = "1.0"
 
 # Utility
 open = "3.2.0"
-online = { version = "4.0.0", default-features = false, features = ["tokio"] }
-tokio = { version = "1.25.0" }
+online = "4.0.0"
 
 # Deep Linking
 [dependencies.tauri-plugin-deep-link]
