--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-switch": "^7.0.0",
     "react-router-dom": "^6.8.1",
 
     "events": "^3.3.0",
