--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,10 +20,12 @@ window-shadows = "0.2.0"
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+base64 = "0.21.0"
 
 # Utility
 open = "3.2.0"
 online = "4.0.0"
+tokio = { version = "1.25.0", features = ["fs"] }
 
 # Deep Linking
 [dependencies.tauri-plugin-deep-link]
