--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/node": "^18.7.10",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-beautiful-dnd": "^13.1.3",
 
     "vite": "^4.0.0",
     "vite-tsconfig-paths": "^3.5.0",
