--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.7.1",
     "react-switch": "^7.0.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-tooltip": "^5.8.3",
     "rc-slider": "^10.1.1",
 
     "events": "^3.3.0",
