Complete navigation overhaul

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2",
     "react-icons": "^4.7.1",
     "react-switch": "^7.0.0",
     "react-tooltip": "^5.8.3",
