--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "postinstall": "rustup override set nightly",
 
-    "start:dev": "tauri dev",
+    "start:desktop": "tauri dev",
+    "start:web": "vite",
     "lint": "npx prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
     "package": "tauri build",
 
@@ -31,7 +32,7 @@
 
     "events": "^3.3.0",
     "howler": "^2.2.3",
-    "zustand": "^4.4.6",
+    "zustand": "^4.4.0",
     "js-base64": "^3.7.5",
 
     "@tauri-apps/api": "^1.2.0"
@@ -44,7 +45,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-beautiful-dnd": "^13.1.3",
 
-    "vite": "^4.0.0",
+    "vite": "^4.5.0",
     "vite-tsconfig-paths": "^3.5.0",
     "@vitejs/plugin-react": "^3.0.0",
     "vite-plugin-conditional-compiler": "^0.2.1",
