--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
 
     "vite": "^4.5.0",
     "vite-tsconfig-paths": "^3.5.0",
-    "@vitejs/plugin-react": "^3.0.0",
+    "@vitejs/plugin-react-swc": "^3.4.1",
     "vite-plugin-conditional-compiler": "^0.2.1",
 
     "sass": "^1.58.3",
