--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-icons": "^4.7.1",
     "react-switch": "^7.0.0",
     "react-tooltip": "^5.8.3",
+    "react-colorful": "^5.6.1",
+    "react-collapsible": "^2.10.0",
     "react-beautiful-dnd": "^13.1.1",
     "rc-slider": "^10.1.1",
 
