(impr.) Directly call `vite build` instead of running `tsc`

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "package": "tauri build",
 
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "tauri": "tauri"
   },
