(feat) Resolve images locally on desktop platforms

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,7 +25,11 @@ base64 = "0.21.0"
 # Utility
 open = "5.0.0"
 online = "4.0.0"
+reqwest = { version = "0.11.22", features = ["blocking"] }
 tokio = { version = "1.25.0", features = ["fs"] }
+
+# HTTP serving
+rouille = "3.6.2"
 
 # Deep Linking
 [dependencies.tauri-plugin-deep-link]
