--- a/package.json
+++ b/package.json
@@ -2,67 +2,60 @@
   "name": "laudiolin",
   "description": "A music player.",
   "version": "3.0.0",
-  "authors": ["KingRainbow44", "Arikatsu"],
+  "authors": [
+    "KingRainbow44",
+    "Arikatsu"
+  ],
   "private": true,
-
   "type": "module",
   "scripts": {
     "postinstall": "rustup override set nightly",
-
     "start:desktop": "tauri dev",
     "start:web": "vite",
     "lint": "npx prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
     "package": "tauri build",
-
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "tauri": "tauri"
   },
-
   "dependencies": {
+    "@tauri-apps/api": "^1.2.0",
+    "events": "^3.3.0",
+    "fast-average-color": "^9.4.0",
+    "howler": "^2.2.3",
+    "js-base64": "^3.7.5",
+    "rc-slider": "^10.1.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-collapsible": "^2.10.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2",
     "react-icons": "^4.7.1",
+    "react-router-dom": "^6.8.2",
     "react-switch": "^7.0.0",
     "react-tooltip": "^5.8.3",
-    "react-colorful": "^5.6.1",
-    "react-collapsible": "^2.10.0",
-    "react-beautiful-dnd": "^13.1.1",
-    "rc-slider": "^10.1.1",
-
-    "events": "^3.3.0",
-    "howler": "^2.2.3",
-    "zustand": "^4.4.0",
-    "js-base64": "^3.7.5",
-
-    "@tauri-apps/api": "^1.2.0"
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
-    "typescript": "^4.6.4",
+    "@tauri-apps/cli": "^1.4.0",
     "@types/howler": "^2.2.7",
     "@types/node": "^18.7.10",
     "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
     "@types/react-beautiful-dnd": "^13.1.3",
-
-    "vite": "^4.5.0",
-    "vite-tsconfig-paths": "^3.5.0",
+    "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react-swc": "^3.4.1",
-    "vite-plugin-conditional-compiler": "^0.2.1",
-
-    "sass": "^1.58.3",
-    "cssnano": "^5.1.15",
-    "tailwindcss": "^3.2.7",
     "autoprefixer": "^10.4.13",
-
+    "cssnano": "^5.1.15",
     "postcss": "^8.4.21",
-    "postcss-load-config": "^4.0.1",
     "postcss-font-magician": "^3.0.0",
-
+    "postcss-load-config": "^4.0.1",
     "prettier": "^2.7.1",
-
-    "@tauri-apps/cli": "^1.4.0"
+    "sass": "^1.58.3",
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.6.4",
+    "vite": "^4.5.0",
+    "vite-plugin-conditional-compiler": "^0.2.1",
+    "vite-tsconfig-paths": "^3.5.0"
   }
 }
