--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -35,6 +35,9 @@ portpicker = "0.1"
 # HTTP serving
 rouille = "3.6.2"
 
+[target.'cfg(windows)'.dependencies]
+windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }
+
 [features]
 # by default Tauri runs in production mode
 # when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
